entry for an example.

DEPRECATED/OBSOLETE Items
-------------------------

The items listed below are interfaces that are deprecated or obsolete,
categorized by the release in which the change was made.  If the
change involved a rename/removal of a routine, both the original and
new names should be listed for reference.


**************
* DEPRECATED *
**************


7.24
----
src/irprep
       all_sf, firpass, ir-X, irdisp, pictx, secpass, shapefact, showterm [deprecated 7.24]
include/raytrace.h librt
        RT_DBHASH and RT_DBNHASH [deprecation 7.24]

7.22
----
include/raytrace.h librt
	nmg_model_break_e_on_v -> nmg_break_e_on_v [deprecation 7.22]
	RT_GET_TREE -> BU_GET [deprecation 7.22]
	RT_FREE_TREE -> BU_PUT [deprecation 7.22]
include/bu.h
        bu_parse_mm() [deprecated 7.22]
librtserver
        becoming stand-alone project, removes optional java dependency [deprecated 7.22]
mged
	em, e_muves, l_muves, lm, read_muves, and t_muves MUVES-specific commands [deprecated 7.22]

7.20
----
liborle
	remove liborle and the tools using it, fb-orle, orle-fb, orle-pix and
	pix-orle [deprecated 7.20]
tclscripts/lib
	Mged, Database, Db, Dm, Drawable, Display, QuadDisplay, View -> Ged [deprecated 7.20]
librt
	bspline primitive [deprecated 7.20]
	poly primitive [deprecated 7.20]
	hf primitive [deprecated 7.20]
include/bu.h
	bu_vls_init_if_uninit() -> bu_vls_init() [deprecated 7.20]
autogen.sh && configure
	GNU Autotools build system -> CMake build system [deprecated 7.20]
	./configure -> cmake . [deprecated 7.20]
include/raytrace.h
	rt_load_attrs() -> rt_gettrees_and_attrs() or db5_import_attributs() [deprecated 7.20]
	db_regexp_match() -> !bu_fnmatch() [deprecated 7.20]

7.18
----
include/raytrace.h rt_comb_internal members
	region_id -> region_id attribute [deprecated 7.18]
	aircode -> air attribute [deprecated 7.18]
	GIFTmater -> material_id attribute [deprecated 7.18]
	los -> los attribute [deprecated 7.18]
bu.h xdr API
	BU_GLONGLONG() -> ntohll() [deprecated 7.18]